# aoc22

./: Cargo.toml
day1/src/: main.rs
day10/src/: main.rs
day11/src/: main.rs  monkey.rs
day2/src/: main.rs
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/src/: main.rs
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/src/: main.rs
day9/src/: main.rs
