[workspace]
members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
]

[workspace.package]
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.66"
